fixed note boxes to be consistent

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -1317,8 +1317,9 @@ The basic idea is to create a grid of synthetic new observations using the `expa
 predict the label of each, and visualize the predictions with a colored scatter having a very high transparency 
 (low `alpha` value) and large point radius. See if you can figure out what each line is doing!
 
-> *Understanding this code is not required for the remainder of the textbook. It is included
-> for those readers who would like to use similar visualizations in their own data analyses.* 
+> **Note:** Understanding this code is not required for the remainder of the
+> textbook. It is included for those readers who would like to use similar
+> visualizations in their own data analyses. 
 
 ```{r 05-workflow-plot-show, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of smoothness versus area where background color indicates the decision of the classifier."}
 # create the grid of area/smoothness vals, and arrange in a data frame
