--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -47,7 +47,7 @@ labels for the observations in the **test set**, then we have some
 confidence that our classifier might also accurately predict the class
 labels for new observations without known class labels.
 
-> **Note:** if there were a golden rule of machine learning, \index{golden rule of machine learning} it might be this: 
+> **Note:** If there were a golden rule of machine learning, \index{golden rule of machine learning} it might be this: 
 > *you cannot use the test data to build the model!* If you do, the model gets to
 > "see" the test data in advance, making it look more accurate than it really
 > is. Imagine how bad it would be to overestimate your classifier's accuracy
@@ -486,7 +486,7 @@ use one to train the model, and then use the other to evaluate it.
 In this section, we will cover the details of this procedure, as well as 
 how to use it to help you pick a good parameter value for your classifier.
 
-> **Remember:** *don't touch the test set during the tuning process. Tuning is a part of model training!*
+**And remember:** don't touch the test set during the tuning process. Tuning is a part of model training!
 
 ### Cross-validation
 
@@ -946,9 +946,9 @@ the $K$-NN here.
 
 ## Predictor variable selection
 
-> *This section is not required reading for the remainder of the textbook. It is included for those readers 
-interested in learning how irrelevant variables can influence the performance of a classifier, and how to
-pick a subset of useful variables to include as predictors.*
+> **Note:** This section is not required reading for the remainder of the textbook. It is included for those readers 
+> interested in learning how irrelevant variables can influence the performance of a classifier, and how to
+> pick a subset of useful variables to include as predictors.
 
 Another potentially important part of tuning your classifier is to choose which
 variables from your data will be treated as predictor variables. Technically, you can choose
@@ -1174,7 +1174,7 @@ models that best subset selection requires you to train! For example, while best
 training over 1000 candidate models with $m=10$ predictors, forward selection requires training only 55 candidate models.
  Therefore we will continue the rest of this section using forward selection.
 
-> One word of caution before we move on. Every additional model that you train 
+> **Note:** One word of caution before we move on. Every additional model that you train 
 > increases the likelihood that you will get unlucky and stumble 
 > on a model that has a high cross-validation accuracy estimate, but a low true
 > accuracy on the test data and other future observations.
@@ -1329,7 +1329,7 @@ predictors from the model! It is always worth remembering, however, that what cr
 is an *estimate* of the true accuracy; you have to use your judgement when looking at this plot to decide
 where the elbow occurs, and whether adding a variable provides a meaningful increase in accuracy.
 
-> Remember: since the choice of which variables to include as predictors is
+> **Note:** Since the choice of which variables to include as predictors is
 > part of tuning your classifier, you *cannot use your test data* for this
 > process! 
 
