--- a/inference.Rmd
+++ b/inference.Rmd
@@ -739,7 +739,7 @@ called **the bootstrap**.  Note that by taking many samples from our single, obs
 sample, we do not obtain the true sampling distribution, but rather an
 approximation that we call **the bootstrap distribution**. \index{bootstrap!distribution}
 
-> **Note:** we must sample *with* replacement when using the bootstrap.
+> **Note:** We must sample *with* replacement when using the bootstrap.
 > Otherwise, if we had a sample of size $n$, and obtained a sample from it of
 > size $n$ *without* replacement, it would just return our original sample!
 
