--- a/intro.Rmd
+++ b/intro.Rmd
@@ -65,8 +65,8 @@ then we might ask the following question, which we wish to answer using our data
 *Which ten Aboriginal languages were most often reported in 2016 as mother
 tongues in Canada, and how many people speak each of them?* 
 
-> **A note about the *data* in data science!** 
-> Data science\index{data science!good practices} cannot be done without a deep understanding of the data and
+> **Note:** Data science\index{data science!good practices} cannot be done without 
+> a deep understanding of the data and
 > problem domain. In this book, we have simplified the data sets used in our
 > examples to concentrate on methods and fundamental concepts. But in real
 > life, you cannot and should not do data science without a domain expert.
@@ -224,7 +224,7 @@ and visualize data.
 library(tidyverse)
 ```
 
-> **In case you want to know more (optional):** Notice that we got some extra
+> **Note:** You may have noticed that we got some extra
 > output from R saying `Attaching packages` and `Conflicts` below our code
 > line. These are examples of *messages* in R, which give the user more
 > information that might be handy to know. The `Attaching packages` message is
@@ -263,7 +263,7 @@ knitr::include_graphics("img/read_csv_function.jpeg")
 read_csv("data/can_lang.csv")
 ```
 
-> **In case you want to know more (optional):** There is another function
+> **Note:** There is another function
 > that also loads csv files named `read.csv`. We will *always* use 
 > `read_csv` in this book, as it is designed to play nicely with all of the 
 > other `tidyverse` functions, which we will use extensively. Be
@@ -523,7 +523,7 @@ ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity")
 ```
 
-> **In case you have used R before and are curious:** The vast majority of the
+> **Note:** The vast majority of the
 > time, a single expression in R must be contained in a single line of code.
 > However, there *are* a small number of situations in which you can have a
 > single R expression span multiple lines. Above is one such case: here, R knows that a line cannot
