--- a/reading.Rmd
+++ b/reading.Rmd
@@ -184,7 +184,7 @@ relative path to the file.
 canlang_data <- read_csv("data/can_lang.csv")
 ```
 
-> **Note:** it is also normal and expected that \index{warning} a message is
+> **Note:** It is also normal and expected that \index{warning} a message is
 > printed out after using
 > the `read_csv` and related functions. This message lets you know the data types
 > of each of the columns that R inferred while reading the data into R.  In
