--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -71,7 +71,7 @@ of our method on observations not seen during training. And finally, we can use 
 choices of model parameters (e.g., K in a K-nearest neighbors model). The major difference
 is that we are now predicting numerical variables instead of categorical variables.
 
-> You can usually tell whether a \index{categorical variable}\index{numerical variable}
+> **Note:** You can usually tell whether a \index{categorical variable}\index{numerical variable}
 > variable is numerical or categorical---and therefore whether you
 > need to perform regression or classification---by taking two response variables X and Y from your
 > data, and asking the question, "is response variable X *more* than response variable Y?"
@@ -351,20 +351,19 @@ errors_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
 errors_plot
 ```
 
-> **RMSPE versus RMSE**
-When using many code packages (`tidymodels` included), the evaluation output 
-we will get to assess the prediction quality of
-our KNN regression models is labeled "RMSE", or "root mean squared
-error". Why is this so, and why not just RMSPE? \index{RMSPE!comparison with RMSE}
-In statistics, we try to be very precise with our
-language to indicate whether we are calculating the prediction error on the
-training data (*in-sample* prediction) versus on the testing data 
-(*out-of-sample* prediction). When predicting and evaluating prediction quality on the training data, we 
- say RMSE. By contrast, when predicting and evaluating prediction quality
-on the testing or validation data, we say RMSPE. 
-The equation for calculating RMSE and RMSPE is exactly the same; all that changes is whether the $y$s are
-training or testing data. But many people just use RMSE for both, 
-and rely on context to denote which data the root mean squared error is being calculated on.
+> **Note:** When using many code packages (`tidymodels` included), the evaluation output 
+> we will get to assess the prediction quality of
+> our KNN regression models is labeled "RMSE", or "root mean squared
+> error". Why is this so, and why not RMSPE? \index{RMSPE!comparison with RMSE}
+> In statistics, we try to be very precise with our
+> language to indicate whether we are calculating the prediction error on the
+> training data (*in-sample* prediction) versus on the testing data 
+> (*out-of-sample* prediction). When predicting and evaluating prediction quality on the training data, we 
+>  say RMSE. By contrast, when predicting and evaluating prediction quality
+> on the testing or validation data, we say RMSPE. 
+> The equation for calculating RMSE and RMSPE is exactly the same; all that changes is whether the $y$s are
+> training or testing data. But many people just use RMSE for both, 
+> and rely on context to denote which data the root mean squared error is being calculated on.
 
 Now that we know how we can assess how well our model predicts a numerical
 value, let's use R to perform cross-validation and to choose the optimal $K$.
