--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -47,7 +47,7 @@ over their values for a prediction, in simple linear regression, we create a
 straight line of best fit through the training data and then
 "look up" the prediction using the line.
 
-> **Note:** although we did not cover it in earlier chapters, there 
+> **Note:** Although we did not cover it in earlier chapters, there 
 > is another popular method for classification called *logistic
 > regression* (it is used for classification even though the name, somewhat confusingly,
 > has the word "regression" in it). In logistic regression---similar to linear regression---you
@@ -834,7 +834,7 @@ a deep understanding of the problem---as well as the wrangling tools
 from previous chapters---to engineer useful new features that improve
 predictive performance.
 
-> **Note:** feature engineering
+> **Note:** Feature engineering
 > is *part of tuning your model*, and as such you must not use your test data
 > to evaluate the quality of the features you produce. You are free to use
 > cross-validation, though!
