--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -113,7 +113,7 @@ In the
 we list many of the common version control systems 
 and repository hosting services in use today.
 
-> **Note:** technically you don't *have to* use a repository hosting service. 
+> **Note:** Technically you don't *have to* use a repository hosting service. 
 > You can, for example, version control a project
 > that is stored only in a folder on your computer - 
 > never sharing it on a repository hosting service. 
