--- a/viz.Rmd
+++ b/viz.Rmd
@@ -347,8 +347,7 @@ change the font size, we use the `theme` function with the `text` argument:
 \index{ggplot!xlab,ylab}
 \index{ggplot!theme}
 
-> **Note:** 
-> The `theme` function is quite complex and has many arguments 
+> **Note:** The `theme` function is quite complex and has many arguments 
 > that can be specified to control many non-data aspects of a visualization.
 > An in-depth discussion of the `theme` function is beyond the scope of this book.
 > Interested readers may consult the `theme` function documentation;
@@ -383,8 +382,7 @@ and so we need to use the `date` function
 (from the `tidyverse` `lubridate` R package) 
 to convert the character strings we provide to `c` to `date` vectors.
 
-> **Note:** 
-> `lubridate` is a package that is installed by the `tidyverse` metapackage,
+> **Note:** `lubridate` is a package that is installed by the `tidyverse` metapackage,
 > but is not loaded by it. 
 > Hence we need to load it separately in the code below.
 
@@ -1102,11 +1100,11 @@ morley_hist
 ```
 
 > **Note:** Factors impact plots in two ways:
-(1) ensuring a color is mapped as discretely where appropriate (like in this
-example) and (2) the ordering of levels in a plot. `ggplot` takes into account
-the order of the factor levels as opposed to the order that is displayed in
-your data frame. Learning how to reorder your factor levels will help you with
-reordering the labels of a factor on a plot.  
+> (1) ensuring a color is mapped as discretely where appropriate (like in this
+> example) and (2) the ordering of levels in a plot. `ggplot` takes into account
+> the order of the factor levels as opposed to the order that is displayed in
+> your data frame. Learning how to reorder your factor levels will help you with
+> reordering the labels of a factor on a plot.  
  
 Unfortunately, the attempt to separate out the experiment number visually has
 created a bit of a mess. All of the colors in Figure
@@ -1403,8 +1401,7 @@ take your computer some time to open the image. On the other hand, you can zoom
 into / scale up vector graphics as much as you like without the image looking
 bad, while raster images eventually start to look "pixellated." 
 
-> **Note:** 
-> The portable document format [PDF](https://en.wikipedia.org/wiki/PDF) (`.pdf`) is commonly used to
+> **Note:** The portable document format [PDF](https://en.wikipedia.org/wiki/PDF) (`.pdf`) is commonly used to
 > store *both* raster and vector formats. If you try to open a PDF and it's taking a long time
 > to load, it may be because there is a complicated vector graphics image that your computer is rendering. 
 \index{PDF}
