--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1358,10 +1358,7 @@ region_lang |>
   summarize(across(mother_tongue:lang_known, max))
 ``` 
 
-> **Note on calculating summary statistics with `summarize` + `across`** 
-> **when there are `NA`s**:
-> 
-> Similarly to when we use base R statistical summary functions 
+> **Note:** Similarly to when we use base R statistical summary functions 
 > (e.g., `max`, `min`, `mean`, `sum`, etc) with `summarize` alone, 
 > the use of the `summarize` + `across` functions paired 
 > with base R statistical summary functions
@@ -1441,9 +1438,7 @@ region_lang |>
   map_dfr(max)
 ```
 
-> **Note on calculating summary statistics with `map` when there are `NA`s**:
-> 
-> Similarly to when we use base R statistical summary functions 
+> **Note:** Similarly to when we use base R statistical summary functions 
 > (e.g., `max`, `min`, `mean`, `sum`, etc.) with `summarize`, 
 > `map` functions paired with base R statistical summary functions
 > also return `NA` values when we apply them to columns that 
