--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -489,7 +489,7 @@ plot_grid(plotlist = iter_plot_list, ncol = 2,
 Note that at this point, we can terminate the algorithm since none of the assignments changed
 in the fourth iteration; both the centers and labels will remain the same from this point onward.
 
-> Is K-means *guaranteed* to stop at some point, or could it iterate forever? As it turns out,
+> **Note:** Is K-means *guaranteed* to stop at some point, or could it iterate forever? As it turns out,
 > thankfully, the answer is that K-means \index{K-means!termination} is guaranteed to stop after *some* number of iterations. For the interested reader, the
 > logic for this has three steps: (1) both the label update and the center update decrease total WSSD in each iteration,
 > (2) the total WSSD is always greater than or equal to 0, and (3) there are only a finite number of possible
