fixed one more notebox in reading

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -770,9 +770,9 @@ write_csv(no_official_lang_data, "data/no_official_languages.csv")
 
 ## Obtaining data from the web 
 
-> *This section is not required reading for the remainder of the textbook. It
+> **Note:** This section is not required reading for the remainder of the textbook. It
 > is included for those readers interested in learning a little bit more about
-> how to obtain different types of data from the web.*
+> how to obtain different types of data from the web.
 
 Data doesn't just magically appear on your computer; you need to get it from
 somewhere. Earlier in the chapter we showed you how to access data stored in a
