made pdf use plainnat for URLs

--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -7,7 +7,7 @@ documentclass: krantz
 classoption:
   - krantz2
 bibliography: [references.bib]
-biblio-style: apalike
+biblio-style: plainnat
 link-citations: yes
 colorlinks: yes
 lot: yes
