--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,7 @@
 \usepackage{booktabs}
 \usepackage{amsthm}
 \usepackage{makeidx}
+\usepackage{url}
 \makeindex
 \makeatletter
 \def\thm@space@setup{%
