--- a/references.bib
+++ b/references.bib
@@ -26,8 +26,7 @@
   volume={347},
   number={6228},
   pages={1314--1315},
-  year={2015},
-  publisher={American Association for the Advancement of Science}
+  year={2015}
 }
 
 @book{peng2015art,
