added urls to statscan references

--- a/references.bib
+++ b/references.bib
@@ -10,13 +10,15 @@
 @misc{cancensus2016,
   author = {{Statistics Canada}},
   title = {Population Census},
-  year = {2016}
+  year = {2016},
+  url = {https://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}
 }
 
-@misc{language2018,
+@misc{language2016,
   author = {{Statistics Canada}},
-  title = {Aboriginal languages in Canada},
-  year = {2018},
+  title = {The Aboriginal languages of First Nations people, M\'etis and Inuit},
+  year = {2016},
+  url = {https://www12.statcan.gc.ca/census-recensement/2016/as-sa/98-200-x/2016022/98-200-x2016022-eng.cfm}
 }
 
 @article{leek2015question,
