fixing paragraph about table of commuters, population

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -399,9 +399,9 @@ been met:
 
 Suppose we have observations spread across multiple rows rather than in a single \index{pivot\_wider}
 row. For example, in Figure \@ref(fig:long-to-wide), the table on the left is in an
-untidy, long format because the `count` column contains two variables
-(population and commuter count) and information about each observation 
-(here, population and commuter counts for a region) is split across two rows. 
+untidy, long format because the `count` column contains three variables
+(population, commuter, and incorporated count) and information about each observation 
+(here, population, commuter, and incorporated counts for a region) is split across three rows. 
 Remember: one of the criteria for tidy data 
 is that each observation must be in a single row.
 
@@ -413,8 +413,7 @@ before the maximum can be computed.
 In comparison, if the data were tidy, 
 all we would have to do is compute the maximum value for the commuter column.
 To reshape this untidy data set to a tidy (and in this case, wider) format,
-we need to create a column called "population" 
-and a column called "commuters."
+we need to create a column called "population", "commuters", and "incorporated."
 This is illustrated in the right table of Figure \@ref(fig:long-to-wide).
 
 ``` {r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data.", fig.retina = 2, out.width = "100%"}
