--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -82,7 +82,8 @@ data set. There are 13 entities in the data set in total, corresponding to the
 13 rows in Figure \@ref(fig:02-obs).
 
 ``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/obs_and_var/obs_and_var.001.jpeg")
+image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.004.jpeg") %>%
+  image_crop("3632x700")
 ```
 
 Internally, R stores the columns of a data frame as either
@@ -92,7 +93,8 @@ Internally, R stores the columns of a data frame as either
 sections.
 
 ``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame with three vectors.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/vectors.jpeg")
+image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.005.jpeg") %>%
+  image_crop("3632x700")
 ```
 
 ### What is a vector?
@@ -123,7 +125,8 @@ year
 > Vectors chapter of Advanced R [@wickham2019advanced].
 
 ``` {r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a vector whose type is character.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/vector/vector.001.jpeg")
+image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.007.jpeg") %>%
+  image_crop("3632x590")
 ```
 
 Table: (#tab:datatype-table) Basic data types in R
@@ -166,7 +169,8 @@ all elements are characters), whereas elements within a single list can be of
 different types (e.g., characters, integers, logicals, and even other lists). 
 
 ``` {r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/vec_vs_list/vec_vs_list.001.jpeg")
+image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.008.jpeg") %>%
+  image_crop("3632x590")
 ```
 
 ### What does this have to do with data frames?
@@ -186,7 +190,8 @@ It is generally much more common to use *vector* columns, though,
 as the values for a single variable are usually all of the same type.
 
 ``` {r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/dataframe/dataframe.001.jpeg")
+image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.009.jpeg") %>%
+  image_crop("3632x700")
 ```
 
 The functions from the `tidyverse` package that we use often give us a
@@ -239,7 +244,8 @@ Figure \@ref(fig:02-tidy-image) demonstrates a tidy data set that satisfies thes
 three criteria. 
 
 ``` {r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Tidy data satisfies three criteria.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/tidy_data.jpeg")
+image_read("img/tidy_data.jpeg") %>%
+  image_crop("3632x530")
 ```
 
 There are many good reasons for making sure your data are tidy as a first step in your analysis.
