--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -431,8 +431,6 @@ There each row corresponds to an iteration,
 where the left column depicts the center update, 
 and the right column depicts the reassignment of data to clusters.
 
-**Center Update**  &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;**Label Update**
-
 ```{r 10-toy-kmeans-iter, echo = FALSE, warning = FALSE, fig.height = 16, fig.width = 8, fig.cap = "First four iterations of K-means clustering on the `penguin_data` example data set. Each row corresponds to an iteration, where the left column depicts the center update, and the right column depicts the reassignment of data to clusters. Cluster centers are indicated by larger points that are outlined in black."}
 list_plot_cntrs <- vector(mode = "list", length = 4)
 list_plot_lbls <- vector(mode = "list", length = 4)
@@ -444,13 +442,29 @@ for (i in 1:4) {
     summarize_all(funs(mean))
   nclus <- nrow(centers)
   # replot with centers
-  plt_ctr <- ggplot(penguin_data, aes(y = bill_length_standardized, x = flipper_length_standardized, color = label)) +
+  plt_ctr <- ggplot(penguin_data, aes(y = bill_length_standardized, 
+                                      x = flipper_length_standardized, 
+                                      color = label)) +
     geom_point(size = 2) +
     xlab("Flipper Length (standardized)") +
     ylab("Bill Length (standardized)") +
     theme(legend.position = "none") +
     scale_color_manual(values= cbpalette) + 
-    geom_point(data = centers, aes(y = bill_length_standardized, x = flipper_length_standardized, fill = label), size = 5, shape = 21, stroke = 2, color = "black", fill = cbpalette)
+    geom_point(data = centers, 
+               aes(y = bill_length_standardized, 
+                                   x = flipper_length_standardized, 
+                                   fill = label), 
+               size = 5, 
+               shape = 21, 
+               stroke = 2, 
+               color = "black", 
+               fill = cbpalette) +
+    annotate("text", x = -1.15, y = 1.8, label = paste0("Iteration ", i))
+  
+  if (i == 1) {
+    plt_ctr <- plt_ctr +
+      ggtitle("Center Update")
+  }
   
   # reassign labels
   dists <- rbind(centers, penguin_data) |>
@@ -458,16 +472,32 @@ for (i in 1:4) {
     dist() |>
     as.matrix()
   dists <- as_tibble(dists[-(1:nclus), 1:nclus])
-  penguin_data <- penguin_data |> mutate(label = apply(dists, 1, function(x) names(x)[which.min(x)]))
+  penguin_data <- penguin_data |> 
+    mutate(label = apply(dists, 1, function(x) names(x)[which.min(x)]))
 
-  plt_lbl <- ggplot(penguin_data, aes(y = bill_length_standardized, x = flipper_length_standardized, color = label)) +
+  plt_lbl <- ggplot(penguin_data, 
+                    aes(y = bill_length_standardized, 
+                        x = flipper_length_standardized, 
+                        color = label)) +
     geom_point(size = 2) +
     xlab("Flipper Length (standardized)") +
     ylab("Bill Length (standardized)") +
     theme(legend.position = "none") +
     scale_color_manual(values= cbpalette) +
-    geom_point(data = centers, aes(y = bill_length_standardized, x = flipper_length_standardized, fill = label), size = 5, shape = 21, stroke = 2, color = "black", fill = cbpalette) 
+    geom_point(data = centers, 
+               aes(y = bill_length_standardized, 
+                   x = flipper_length_standardized, fill = label), 
+               size = 5, 
+               shape = 21, 
+               stroke = 2, 
+               color = "black", 
+               fill = cbpalette) 
 
+  if (i == 1) {
+    plt_lbl <- plt_lbl +
+      ggtitle("Label Update")
+  }
+  
   list_plot_cntrs[[i]] <- plt_ctr
   list_plot_lbls[[i]] <- plt_lbl
 }
@@ -477,13 +507,9 @@ iter_plot_list <- c(list_plot_cntrs[1], list_plot_lbls[1],
                     list_plot_cntrs[3], list_plot_lbls[3],
                     list_plot_cntrs[4], list_plot_lbls[4])
 
-plot_grid(plotlist = iter_plot_list, ncol = 2,
-          label_x = 0.005,
-          label_y = 0.980,
-          labels = c("Iteration 1", "",
-                     "Iteration 2", "",
-                     "Iteration 3", "",
-                     "Iteration 4", ""))
+plot_grid(plotlist = iter_plot_list, 
+          ncol = 2,
+          rel_heights = c(1.065, 1, 1, 1))
 ```
 
 Note that at this point, we can terminate the algorithm since none of the assignments changed
@@ -531,8 +557,6 @@ plt_lbl
 
 Figure \@ref(fig:10-toy-kmeans-bad-iter) shows what the iterations of K-means would look like with the unlucky random initialization shown in Figure \@ref(fig:10-toy-kmeans-bad-init).
 
-**Center Update**  &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;**Label Update**
-
 ```{r 10-toy-kmeans-bad-iter, echo = FALSE, warning = FALSE, fig.height = 20, fig.width = 8, fig.cap = "First five iterations of K-means clustering on the `penguin_data` example data set with a poor random initialization. Each row corresponds to an iteration, where the left column depicts the center update, and the right column depicts the reassignment of data to clusters. Cluster centers are indicated by larger points that are outlined in black."}
 list_plot_cntrs <- vector(mode = "list", length = 5)
 list_plot_lbls <- vector(mode = "list", length = 5)
@@ -559,8 +583,14 @@ for (i in 1:5) {
                shape = 21, 
                stroke = 2, 
                color = "black", 
-               fill = cbpalette)
+               fill = cbpalette) +
+    annotate("text", x = -1.15, y = 1.8, label = paste0("Iteration ", i))
 
+  if (i == 1) {
+    plt_ctr <- plt_ctr +
+      ggtitle("Center Update")
+  }
+  
   # reassign labels
   dists <- rbind(centers, penguin_data) |>
     select("flipper_length_standardized", "bill_length_standardized") |>
@@ -587,6 +617,11 @@ for (i in 1:5) {
                color = "black", 
                fill = cbpalette)
 
+  if (i == 1) {
+    plt_lbl <- plt_lbl +
+      ggtitle("Label Update")
+  }
+  
   list_plot_cntrs[[i]] <- plt_ctr
   list_plot_lbls[[i]] <- plt_lbl
 }
@@ -597,14 +632,9 @@ iter_plot_list <- c(list_plot_cntrs[1], list_plot_lbls[1],
                     list_plot_cntrs[4], list_plot_lbls[4],
                     list_plot_cntrs[5], list_plot_lbls[5])
 
-plot_grid(plotlist = iter_plot_list, ncol = 2,
-          label_x = 0.005,
-          label_y = 0.980,
-          labels = c("Iteration 1", "",
-                     "Iteration 2", "",
-                     "Iteration 3", "",
-                     "Iteration 4", "",
-                     "Iteration 5", ""))
+plot_grid(plotlist = iter_plot_list, 
+          ncol = 2,
+          rel_heights = c(1.065, 1, 1, 1, 1))
 ```
 
 This looks like a relatively bad clustering of the data, but K-means cannot improve it.
