moved legend to top and made it remain stacked vertically
closes #312

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -710,9 +710,17 @@ ggplot(can_lang, aes(x = most_at_home_percent,
 
 The legend in Figure \@ref(fig:03-scatter-color-by-category) 
 takes up valuable plot area. 
-We can improve this by moving the legend title using the `legend.position` 
-argument of the `theme` function. 
-Here we set it to `"bottom"` to put the legend beneath the plot.
+We can improve this by moving the legend title using the `legend.position`
+and `legend.direction`
+arguments of the `theme` function. 
+Here we set `legend.position` to `"top"` to put the legend above the plot
+and `legend.direction` to `"vertical"` so that the legend items remain 
+vertically stacked on top of each other.
+When the `legend.position` is set to either `"top"` or `"bottom"` 
+the default direction is to stack the legend items horizontally.
+However, that will not work well for this particular visualization 
+because the legend labels are quite long 
+and would run off the page if displayed this way.
 
 ```{r 03-scatter-color-by-category-legend-edit, warning=FALSE, fig.height=5.5, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with the legend edited."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
@@ -722,7 +730,8 @@ ggplot(can_lang, aes(x = most_at_home_percent,
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
        y = "Mother tongue \n (percentage of Canadian residents)") +
   theme(text = element_text(size = 14),
-        legend.position = "bottom") +
+        legend.position = "top",
+        legend.direction = "vertical") +
   scale_x_log10(labels = comma) +
   scale_y_log10(labels = comma)
 ```
@@ -768,7 +777,8 @@ ggplot(can_lang, aes(x = most_at_home_percent,
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
        y = "Mother tongue \n (percentage of Canadian residents)") +
   theme(text = element_text(size = 14),
-        legend.position = "bottom") +
+        legend.position = "top",
+        legend.direction = "vertical") +
   scale_x_log10(labels = comma) +
   scale_y_log10(labels = comma)
 ```
