Fixed missing color pallete. Closes #287

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -780,7 +780,8 @@ ggplot(can_lang, aes(x = most_at_home_percent,
         legend.position = "top",
         legend.direction = "vertical") +
   scale_x_log10(labels = comma) +
-  scale_y_log10(labels = comma)
+  scale_y_log10(labels = comma) +
+  scale_color_brewer(palette = "Set2")
 ```
 
 From the visualization in Figure \@ref(fig:scatter-color-by-category-palette), 
