moved from using parsnip's depracted step_upsample function to using themis's step_upsample function

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -1184,11 +1184,13 @@ fairly nuanced, and a careful treatment would require a lot more detail and math
 For the present purposes, it will suffice to rebalance the data by *oversampling* the rare class. \index{oversampling}
 In other words, we will replicate rare observations multiple times in our data set to give them more
 voting power in the $K$-nearest neighbor algorithm. In order to do this, we will add an oversampling
-step to the earlier `uc_recipe` recipe with the `step_upsample` function. \index{recipe!step\_upsample}
+step to the earlier `uc_recipe` recipe with the `step_upsample` function from the `themis` package. \index{recipe!step\_upsample}
 We show below how to do this, and also
 use the `group_by` and `summarize` functions to see that our classes are now balanced:
 
 ```{r 05-upsample-cancer, warning=FALSE}
+library(themis)
+
 ups_recipe <- recipe(Class ~ ., data = rare_cancer) |>
   step_upsample(Class, over_ratio = 1, skip = FALSE) |>
   prep()
