added message = FALSE to code chunk loading themis

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -1188,7 +1188,7 @@ step to the earlier `uc_recipe` recipe with the `step_upsample` function from th
 We show below how to do this, and also
 use the `group_by` and `summarize` functions to see that our classes are now balanced:
 
-```{r 05-upsample-cancer, warning=FALSE}
+```{r 05-upsample-cancer, warning = FALSE, message = FALSE}
 library(themis)
 
 ups_recipe <- recipe(Class ~ ., data = rare_cancer) |>
