added note to explain use of  function with the  argument of the  function.
Closes #271

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -117,6 +117,13 @@ want to predict (sale price) on the y-axis.
 \index{ggplot!geom\_point}
 \index{visualization!scatter}
 
+> *Note: Given that the y-axis unit is dollars in Figure \@ref(fig:07-edaRegr), 
+> we format the axis labels to put dollar signs in front of the house prices, 
+> as well as commas to increase the readability of the larger numbers.
+> We can do this in R by passing the `dollar_format` function 
+> (from the `scales` package)
+> to the `labels` argument of the `scale_y_continuous` function.
+
 ```{r 07-edaRegr, message = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square feet)."}
 eda <- ggplot(sacramento, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
