bolding note text

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -117,7 +117,7 @@ want to predict (sale price) on the y-axis.
 \index{ggplot!geom\_point}
 \index{visualization!scatter}
 
-> *Note: Given that the y-axis unit is dollars in Figure \@ref(fig:07-edaRegr), 
+> **Note:** Given that the y-axis unit is dollars in Figure \@ref(fig:07-edaRegr), 
 > we format the axis labels to put dollar signs in front of the house prices, 
 > as well as commas to increase the readability of the larger numbers.
 > We can do this in R by passing the `dollar_format` function 
