removed redundancy from bkup, too tehcnical

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -752,9 +752,9 @@ databases at all?
 
 Databases are beneficial in a large-scale setting:
 
-- they enable storing large data sets across multiple computers with automatic redundancy and backups
+- they enable storing large data sets across multiple computers with backups
 - they provide mechanisms for ensuring data integrity and validating input
-- they provide security mechanisms to control access to data
+- they provide security and data access control
 - they allow multiple users to access data simultaneously and remotely without conflicts and errors.
   For example, [there are billions of Google searches conducted daily](https://www.internetlivestats.com/google-search-statistics/). 
   Can you imagine if Google stored all of the data from those searches in a single `.csv
