--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -187,7 +187,7 @@ tumor cell concavity versus smoothness colored by diagnosis in Figure \@ref(fig:
 You will also notice that we set the random seed here at the beginning of the analysis
 using the `set.seed` function, as described in Section \@ref(randomseeds).
 
-```{r 06-precode, fig.height = 4, fig.width = 5, fig.cap="Scatter plot of tumor cell concavity versus smoothness colored by diagnosis label.", message = F, warning = F}
+```{r 06-precode, out.width = "100%", fig.cap="Scatter plot of tumor cell concavity versus smoothness colored by diagnosis label.", message = F, warning = F}
 # load packages
 library(tidyverse)
 library(tidymodels)
@@ -207,7 +207,8 @@ perim_concav <- cancer |>
   geom_point(alpha = 0.5) +
   labs(color = "Diagnosis") +
   scale_color_manual(labels = c("Malignant", "Benign"), 
-                     values = c("orange2", "steelblue2"))
+                     values = c("orange2", "steelblue2")) + 
+  theme(text = element_text(size = 14))
 
 perim_concav
 ```
@@ -753,11 +754,12 @@ We can select the best value of the number of neighbors (i.e., the one that resu
 in the highest classifier accuracy estimate) by plotting the accuracy versus $K$ 
 in Figure \@ref(fig:06-find-k).
 
-```{r 06-find-k, fig.height = 4, fig.width = 5, fig.cap= "Plot of estimated accuracy versus the number of neighbors."}
+```{r 06-find-k, out.width = "100%", fig.cap= "Plot of estimated accuracy versus the number of neighbors."}
 accuracy_vs_k <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
-  labs(x = "Neighbors", y = "Accuracy Estimate")
+  labs(x = "Neighbors", y = "Accuracy Estimate") + 
+  theme(text = element_text(size = 14))
 
 accuracy_vs_k
 ```
@@ -799,7 +801,7 @@ we vary $K$ from 1 to almost the number of observations in the data set.
 set.seed(1)
 ```
 
-```{r 06-lots-of-ks, message = FALSE, fig.height = 4, fig.width = 5, fig.cap="Plot of accuracy estimate versus number of neighbors for many K values."}
+```{r 06-lots-of-ks, message = FALSE, out.width = "100%", fig.cap="Plot of accuracy estimate versus number of neighbors for many K values."}
 k_lots <- tibble(neighbors = seq(from = 1, to = 385, by = 10))
 
 knn_results <- workflow() |>
@@ -814,7 +816,8 @@ accuracies <- knn_results |>
 accuracy_vs_k_lots <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
-  labs(x = "Neighbors", y = "Accuracy Estimate")
+  labs(x = "Neighbors", y = "Accuracy Estimate") + 
+  theme(text = element_text(size = 14))
 
 accuracy_vs_k_lots
 ```
@@ -848,7 +851,7 @@ a balance between the two. You can see these two effects in Figure
 \@ref(fig:06-decision-grid-K), which shows how the classifier changes as 
 we set the number of neighbors $K$ to 1, 7, 20, and 300.
 
-```{r 06-decision-grid-K, echo = FALSE, message = FALSE, fig.height = 7, fig.width = 10, fig.cap = "Effect of K in overfitting and underfitting."}
+```{r 06-decision-grid-K, echo = FALSE, message = FALSE, out.width = "100%", fig.height = 10, fig.width=10, fig.cap = "Effect of K in overfitting and underfitting."}
 ks <- c(1, 7, 20, 300)
 plots <- list()
 
@@ -893,9 +896,14 @@ for (i in 1:length(ks)) {
     labs(color = "Diagnosis") +
     ggtitle(paste("K = ", ks[[i]])) +
     scale_color_manual(labels = c("Malignant", "Benign"), 
-                       values = c("orange2", "steelblue2"))
+                       values = c("orange2", "steelblue2")) + 
+  theme(text = element_text(size = 16)) 
 }
-grid.arrange(grobs = plots)
+
+p_no_legend <- lapply(plots, function(x) x + theme(legend.position = "none"))
+legend <- cowplot::get_legend(plots[[1]] + theme(legend.position = "bottom"))
+p_grid <- cowplot::plot_grid(plotlist = p_no_legend, ncol = 2)
+cowplot::plot_grid(p_grid, legend, ncol = 1, rel_heights = c(1, 0.2))
 ```
 
 ## Summary
@@ -1072,7 +1080,8 @@ res <- tibble(ks = ks, accs = accs, fixedaccs = fixedaccs, nghbrs = nghbrs)
 plt_irrelevant_accuracies <- ggplot(res) +
               geom_line(mapping = aes(x=ks, y=accs)) +
               labs(x = "Number of Irrelevant Predictors", 
-                   y = "Model Accuracy Estimate") 
+                   y = "Model Accuracy Estimate") + 
+  theme(text = element_text(size = 14))
 
 plt_irrelevant_accuracies
 ```
@@ -1092,7 +1101,8 @@ this evidence; if we fix the number of neighbors to $K=3$, the accuracy falls of
 plt_irrelevant_nghbrs <- ggplot(res) +
               geom_line(mapping = aes(x=ks, y=nghbrs)) +
               labs(x = "Number of Irrelevant Predictors", 
-                   y = "Number of neighbors")
+                   y = "Number of neighbors") +  
+  theme(text = element_text(size = 14))
 
 plt_irrelevant_nghbrs
 ```
@@ -1105,7 +1115,8 @@ res_tmp <- res %>% pivot_longer(cols=c("accs", "fixedaccs"),
 plt_irrelevant_nghbrs <- ggplot(res_tmp) +
               geom_line(mapping = aes(x=ks, y=accuracy, color=Type)) +
               labs(x = "Number of Irrelevant Predictors", y = "Accuracy") + 
-              scale_color_discrete(labels= c("Tuned K", "K = 3"))
+              scale_color_discrete(labels= c("Tuned K", "K = 3")) + 
+  theme(text = element_text(size = 14))
 
 plt_irrelevant_nghbrs
 ```
@@ -1337,7 +1348,8 @@ where the elbow occurs, and whether adding a variable provides a meaningful incr
 fwd_sel_accuracies_plot <- accuracies |>
   ggplot(aes(x = size, y = accuracy)) +
   geom_line() +
-  labs(x = "Number of Predictors", y = "Estimated Accuracy")
+  labs(x = "Number of Predictors", y = "Estimated Accuracy") + 
+  theme(text = element_text(size = 14))
 
 fwd_sel_accuracies_plot
 ```
