improved resolution and automation of 3D plotly figures in pdf
Closes #330

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE,
 options(knitr.table.format = function() {
   if (knitr::is_latex_output()) 'latex' else 'pandoc'
 })
+reticulate::use_miniconda('r-reticulate')
 ```
 
 ## Overview 
@@ -598,7 +599,7 @@ plot_3d <- scaled_cancer_3 |>
             z = ~Symmetry,
             color = ~Class,
             opacity = 0.4,
-            size = 150,
+            size = 5,
             colors = c("orange2", "steelblue2", "red"), 
             symbol = ~Class, symbols = c('circle','circle','diamond'))
 
@@ -637,6 +638,9 @@ plot_3d <- plot_3d  %>%
 if(!is_latex_output()){  
   plot_3d
 } else {
+  scene = list(camera = list(eye = list(x=2, y=2, z = 1.5)))
+  plot_3d <- plot_3d  %>% layout(scene = scene)
+  save_image(plot_3d, "img/plot3d_knn_classification.png", scale = 10)
   knitr::include_graphics("img/plot3d_knn_classification.png")
 }
 ```
