--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -5,6 +5,7 @@ library(knitr)
 library(plotly)
 
 knitr::opts_chunk$set(fig.align = "center")
+reticulate::use_miniconda('r-reticulate')
 ```
 
 ## Overview 
@@ -491,6 +492,9 @@ plot_3d <- plot_ly() |>
 if(!is_latex_output()){  
   plot_3d
 } else {
+  scene = list(camera = list(eye = list(x=2, y=2, z = 1.5)))
+  plot_3d <- plot_3d  %>% layout(scene = scene)
+  save_image(plot_3d, "img/plot3d_linear_regression.png", scale = 10)
   knitr::include_graphics("img/plot3d_linear_regression.png")
 }
 ```
